--- a/namazVakitleri.html
+++ b/namazVakitleri.html
@@ -42,7 +42,7 @@
                         	<div style="width:100%;height:100%;font-family:Times;">
                         		<div style="width:49%;float:left;border-right: 1px dashed #aaa;font-size:16px;" id="hijri_day"></div>
                         		<div style="width:49%;float:left;text-align:center;font-size:16px;" id="hijri_year"></div>
-                        		<div style="height:60%;width:100%;float:left;font-size:12px;border-top: 1px dashed #aaa;"" id="hijri_month"></div>
+                        		<div style="height:60%;width:100%;float:left;font-size:12px;border-top: 1px dashed #aaa;" id="hijri_month"></div>
                         	</div>
                         </div>
                     </div></div></div>
